<resources>
    <string name="app_name">Criminal Intent</string>

    <string name="crime_title_hint">Enter a Title for the Crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="date_picker_title">Date of Crime: </string>

    <string name="new_crime"> New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>


    <plurals name="subtitle_plural">
       <item quantity="one">%1$s Crime</item>
       <item quantity="zero">No Crime</item>
       <item quantity="other">%1$s Crimes</item>
   </plurals>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>

    <string name="crime_report_solved">The case is Solved</string>
    <string name="crime_report_unsolved">The case is Unsolved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect"> The Suspect is %s.</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>
    <string name="send_report">Send Crime Report via</string>


</resources>
